--- a/public/index.html
+++ b/public/index.html
@@ -125,6 +125,7 @@
           style="cursor: pointer"
           class="inline-flex items-center py-2 px-2 text-sm font-medium text-gray-500 bg-white rounded-lg border border-indigo-300 hover:bg-indigo-100 hover:text-gray-700 dark:bg-indigo-800 dark:border-indigo-700 dark:text-gray-400 dark:hover:bg-indigo-700 dark:hover:text-white ml-2"
           onclick="morePage()"
+          id="all-btn"
         >
           모든 글 보기
         </a>
@@ -137,6 +138,7 @@
               style="cursor: pointer"
               class="inline-flex items-center py-2 px-4 mr-3 text-sm font-medium text-gray-500 bg-white rounded-lg border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
               onclick="previousPage()"
+              id="previous-btn"
             >
               <svg
                 class="mr-2 w-5 h-5"
@@ -156,6 +158,7 @@
               style="cursor: pointer"
               class="inline-flex items-center py-2 px-4 text-sm font-medium text-gray-500 bg-white rounded-lg border border-gray-300 hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white"
               onclick="nextPage()"
+              id="next-btn"
             >
               Next
               <svg
@@ -273,6 +276,53 @@
       </div>
     </div>
 
+    <div
+      id="toast-default"
+      class="fixed bottom-10 right-10 flex items-center p-4 w-full max-w-xs text-gray-500 bg-white rounded-lg shadow dark:text-gray-400 dark:bg-gray-800"
+      role="alert"
+    >
+      <div
+        class="inline-flex flex-shrink-0 justify-center items-center w-8 h-8 text-blue-500 bg-blue-100 rounded-lg dark:bg-blue-800 dark:text-blue-200"
+      >
+        <svg
+          class="w-5 h-5"
+          fill="currentColor"
+          viewBox="0 0 20 20"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M12.395 2.553a1 1 0 00-1.45-.385c-.345.23-.614.558-.822.88-.214.33-.403.713-.57 1.116-.334.804-.614 1.768-.84 2.734a31.365 31.365 0 00-.613 3.58 2.64 2.64 0 01-.945-1.067c-.328-.68-.398-1.534-.398-2.654A1 1 0 005.05 6.05 6.981 6.981 0 003 11a7 7 0 1011.95-4.95c-.592-.591-.98-.985-1.348-1.467-.363-.476-.724-1.063-1.207-2.03zM12.12 15.12A3 3 0 017 13s.879.5 2.5.5c0-1 .5-4 1.25-4.5.5 1 .786 1.293 1.371 1.879A2.99 2.99 0 0113 13a2.99 2.99 0 01-.879 2.121z"
+            clip-rule="evenodd"
+          ></path>
+        </svg>
+      </div>
+      <div class="ml-3 text-sm font-normal" id="toast-contents">
+        가입하여 글을 작성해보세요!.
+      </div>
+      <button
+        type="button"
+        class="ml-auto -mx-1.5 -my-1.5 bg-white text-gray-400 hover:text-gray-900 rounded-lg focus:ring-2 focus:ring-gray-300 p-1.5 hover:bg-gray-100 inline-flex h-8 w-8 dark:text-gray-500 dark:hover:text-white dark:bg-gray-800 dark:hover:bg-gray-700"
+        data-collapse-toggle="toast-default"
+        aria-label="Close"
+        onclick="toastOff()"
+      >
+        <span class="sr-only">Close</span>
+        <svg
+          class="w-5 h-5"
+          fill="currentColor"
+          viewBox="0 0 20 20"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <path
+            fill-rule="evenodd"
+            d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+            clip-rule="evenodd"
+          ></path>
+        </svg>
+      </button>
+    </div>
+
     <!-- edit modal begin -->
     <div class="hidden container flex justify-center mx-auto" id="edit-modal">
       <div
@@ -375,6 +425,18 @@
             document.getElementById("total-num").innerText = totalLength;
           } else {
             pages = parseInt(totalLength / 10) + 1;
+            // 글의 개수가 적을 때 버튼 사용 못하게
+            if (pages <= 1) {
+              document.getElementById("next-btn").style.cursor = "not-allowed";
+              document.getElementById("next-btn").setAttribute("onclick", "");
+              document.getElementById("previous-btn").style.cursor =
+                "not-allowed";
+              document
+                .getElementById("previous-btn")
+                .setAttribute("onclick", "");
+              document.getElementById("all-btn").style.cursor = "not-allowed";
+              document.getElementById("all-btn").setAttribute("onclick", "");
+            }
             document.getElementById("total-num").innerText = totalLength;
           }
           // show the lists
@@ -502,7 +564,6 @@
           rows.append(template);
         }
       }
-
       //all the lists
       function morePage() {
         rows.innerHTML = "";
@@ -513,36 +574,31 @@
             allItems.forEach((allDoc) => {
               writingRows(allDoc);
               document.getElementById("total-num").innerText = totalLength;
-              document.getElementById("end-num").innerText = totalLength;
             });
           });
       }
       // next page
       function nextPage() {
-        if (pages < 1) {
-          // 클릭 안되게
+        if (pages <= currentPage) {
+          alert("마지막 페이지입니다.");
         } else {
-          if (pages <= currentPage) {
-            alert("마지막 페이지입니다.");
-          } else {
-            currentPage += 1;
-            let next = db
-              .collection("Board")
-              .orderBy("date", "desc")
-              .startAfter(lastVisible)
-              .limit(10);
+          currentPage += 1;
+          let next = db
+            .collection("Board")
+            .orderBy("date", "desc")
+            .startAfter(lastVisible)
+            .limit(10);
 
-            next.get().then((nextItems) => {
-              lastVisible = nextItems.docs[nextItems.docs.length - 1];
-              firstVisible =
-                nextItems.docs[nextItems.docs.length - nextItems.docs.length];
-              rows.innerHTML = "";
-              document.getElementById("page-num").innerText = currentPage;
-              nextItems.forEach((nextDoc) => {
-                writingRows(nextDoc);
-              });
+          next.get().then((nextItems) => {
+            lastVisible = nextItems.docs[nextItems.docs.length - 1];
+            firstVisible =
+              nextItems.docs[nextItems.docs.length - nextItems.docs.length];
+            rows.innerHTML = "";
+            document.getElementById("page-num").innerText = currentPage;
+            nextItems.forEach((nextDoc) => {
+              writingRows(nextDoc);
             });
-          }
+          });
         }
       }
       //previous page
@@ -571,6 +627,10 @@
             });
           });
         }
+      }
+      // off the toast
+      function toastOff() {
+        document.getElementById("toast-default").className = "hidden";
       }
     </script>
     <script>
@@ -797,13 +857,13 @@
             if (doc.data().img == undefined) {
               mainModal.className = "bg-gray-50 visible container";
               mainModalAbsoulte.className =
-                "absolute items-center inset-0 flex justify-center bg-gray-700 bg-opacity-50";
+                "fixed items-center inset-0 flex justify-center bg-gray-700 bg-opacity-50";
               mainTitle.innerText = `Title : ${doc.data().title}`;
               mainContent.innerText = `Contents : ${doc.data().contents}`;
             } else {
               mainModal.className = "bg-gray-50 visible container";
               mainModalAbsoulte.className =
-                "absolute items-center inset-0 flex justify-center bg-gray-700 bg-opacity-50";
+                "fixed items-center inset-0 flex justify-center bg-gray-700 bg-opacity-50";
               mainTitle.innerText = `Title : ${doc.data().title}`;
               mainContent.innerText = `Contents : ${doc.data().contents}`;
               mainImg.setAttribute("src", `${doc.data().img}`);
@@ -993,6 +1053,8 @@
       //로그인 되어있는지 확인 후 프로필 설정, 버튼 재 설정
       firebase.auth().onAuthStateChanged((user) => {
         if (user) {
+          document.getElementById("toast-contents").innerText =
+            "상단의 프로필을 클릭해 본인 만의 프로필을 꾸며보세요!";
           document.getElementById("log-in").className = "hidden";
           document.getElementById("log-out").className =
             "inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-gray-700 hover:bg-gray-800 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500";
