--- a/public/signup.html
+++ b/public/signup.html
@@ -90,6 +90,7 @@
             class="border-2 pl-2 w-3/4 rounded-md"
             placeholder="write password"
             id="pw-new"
+            onkeyup="enterkey()"
           />
         </div>
         <div class="text-center">
@@ -168,42 +169,15 @@
       //로그인 되어있는지 확인 후 프로필 설정, 버튼 재 설정
       firebase.auth().onAuthStateChanged((user) => {
         if (user) {
-          document.getElementById("toast-contents").innerText =
-            "상단의 프로필을 클릭해 본인 만의 프로필을 꾸며보세요!";
           document.getElementById("log-in").className = "hidden";
           document.getElementById("log-out").className =
             "inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-gray-700 hover:bg-gray-800 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-500";
           document.getElementById("sign-up").className = "hidden";
-          db.collection("Users")
-            .doc(`${user.email}`)
-            .get()
-            .then((info) => {
-              document.getElementById("profile-role").innerText =
-                info.data().role;
-              document.getElementById("profile-nick").innerText =
-                info.data().nickname;
-              document.getElementById("comments-nick").innerText = `${
-                info.data().nickname
-              }`;
-              if (info.data().photoURL !== null) {
-                document
-                  .getElementById("profile-img")
-                  .setAttribute("src", `${info.data().photoURL}`);
-                document
-                  .getElementById("comments-img")
-                  .setAttribute("src", `${info.data().photoURL}`);
-              }
-            });
           // 댓글 기능 로그인시에만 가능하도록
         } else {
           document.getElementById("write").className = "hidden";
           document.getElementById("log-out").className = "hidden";
           document.getElementById("nav-bar-profile").remove();
-          document.getElementById("with-login1").className = "text-center";
-          document.getElementById("with-login1").innerHTML =
-            "<div><h1 class='font-semibold mb-2'>댓글은 로그인후 작성 가능합니다.</h1></div>";
-          document.getElementById("with-login2").className = "hidden";
-          document.getElementById("with-login3").className = "hidden";
         }
       });
       // 로그아웃
@@ -222,6 +196,32 @@
       // 프로필 클릭
       function profileClick() {
         window.location.href = "./profile.html";
+      }
+      function enterkey() {
+        if (window.event.keyCode == 13) {
+          let nick = document.getElementById("nick-new").value;
+          let email = document.getElementById("email-new").value;
+          let password = document.getElementById("pw-new").value;
+          firebase
+            .auth()
+            .createUserWithEmailAndPassword(email, password)
+            .then((result) => {
+              db.collection("Users")
+                .doc(`${email}`)
+                .set({
+                  nickname: `${nick}`,
+                  photoURL: noPhoto,
+                  role: "user",
+                })
+                .then(function () {
+                  alert("가입되었습니다. 글을 작성해보세요!");
+                  window.location.href = "./index.html";
+                });
+            })
+            .catch((error) => {
+              alert(error.message + "오류 발생");
+            });
+        }
       }
     </script>
   </body>
