--- a/profile.html
+++ b/profile.html
@@ -9,7 +9,9 @@
   <body class="h-screen">
     <div>
       <div class="px-4 py-3 bg-gray-50 flex justify-between sm:px-6">
-        <h2 class="text-4xl font-extrabold tracking-tight">Mboard</h2>
+        <h2 class="text-4xl font-extrabold tracking-tight" onclick="goHome()">
+          Mboard
+        </h2>
         <div
           id="nav-bar-info"
           class="flex"
@@ -128,6 +130,9 @@
       firebase.initializeApp(firebaseConfig);
     </script>
     <script>
+      function goHome() {
+        window.location.href = "./index.html";
+      }
       const db = firebase.firestore();
       const storage = firebase.storage();
       const noPhoto =
