--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   </head>
   <body class="relative">
     <div>
-      <div class="px-4 py-3 bg-gray-50 flex justify-between sm:px-6">
+      <div
+        class="px-4 py-3 bg-gray-50 flex justify-between sm:px-6 dark:text-gray-400 dark:bg-gray-800"
+      >
         <h2 class="text-4xl font-extrabold tracking-tight" onclick="goHome()">
           Mboard
         </h2>
@@ -67,7 +69,7 @@
       <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
         <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
           <div
-            class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg"
+            class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg dark:text-gray-400 dark:bg-gray-800"
           >
             <table class="min-w-full divide-y divide-gray-200">
               <thead class="bg-gray-50">
@@ -102,7 +104,7 @@
                 </tr>
               </thead>
               <tbody
-                class="bg-white divide-y divide-gray-200"
+                class="bg-white divide-y divide-gray-200 dark:text-gray-400 dark:bg-gray-800"
                 id="rows"
               ></tbody>
             </table>
@@ -111,7 +113,7 @@
       </div>
     </div>
     <div
-      class="bg-gray-50 px-4 py-3 flex items-center justify-center border-t border-gray-200 sm:px-6"
+      class="bg-gray-50 px-4 py-3 flex items-center justify-center border-t border-gray-200 sm:px-6 dark:text-gray-400 dark:bg-gray-800"
     >
       <div class="sm:flex-1 sm:flex sm:items-center sm:justify-between">
         <div>
