--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
         </div>
       </div>
     </div>
-    <div class="flex flex-col">
+    <div class="flex flex-col dark:text-gray-400 dark:bg-gray-800">
       <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
         <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
           <div
             class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg"
           >
             <table class="min-w-full divide-y divide-gray-200">
-              <thead class="bg-gray-50 dark:text-gray-400 dark:bg-gray-800">
+              <thead class="bg-gray-50 dark:bg-gray-800">
                 <tr>
                   <th
                     scope="col"
