--- a/login.html
+++ b/login.html
@@ -6,9 +6,11 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Mboard</title>
   </head>
-  <body>
+  <body class="dark:bg-gray-800">
     <div>
-      <div class="px-4 py-3 bg-gray-50 flex justify-between sm:px-6">
+      <div
+        class="px-4 py-3 bg-gray-50 flex justify-between sm:px-6 dark:text-gray-400 dark:bg-gray-800"
+      >
         <h2 class="text-4xl font-extrabold tracking-tight" onclick="goHome()">
           Mboard
         </h2>
@@ -64,9 +66,11 @@
       </div>
     </div>
     <!-- log-in -->
-    <div class="flex w-full h-3/4 items-center justify-center">
-      <div class="container w-1/4 shadow-lg rounded-md">
-        <h2 class="font-extrabold text-xl text-center mb-3">로그인</h2>
+    <div class="flex w-full h-3/4 items-center justify-center dark:bg-gray-800">
+      <div class="container w-1/4 shadow-lg rounded-md dark:bg-gray-700">
+        <h2 class="font-extrabold text-xl text-center mb-3 dark:text-gray-400">
+          로그인
+        </h2>
         <div class="mb-5 text-center">
           <input
             type="email"
